[package]
name = "eth-relay-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "time", "signal"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
# Use Rustls; disable default features to avoid OpenSSL/native-tls
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "deflate", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
notify = "6.1"
futures = "0.3"
parking_lot = "0.12"
anyhow = "1.0"
once_cell = "1.19"